<resources>
    <string name="app_name">project2</string>
    <string name="google_map_api_key">AIzaSyBWQXn03ILPkA-ORPW1TeHU4mMpEjDCFoE</string>
    <string name="title_home">Home</string>
    <string name="title_maps">Maps</string>
    <string name="title_locations">Places</string>
    <string name="title_share">Share</string>
    <string name="title_option">About</string>
    <string name="save_location">Save Location</string>
    <string name="hint_save_location">Enter location name for saving.</string>
    <string name="student_name_1">Young Taek Song</string>
    <string name="student_id_1">1122390</string>
    <string name="student_name_2">Syed Shahbaz</string>
    <string name="student_id_2">1195561</string>
    <string name="student_name_3">Ryan Ren</string>
    <string name="student_id_3">1180042</string>
    <string name="btn_back">Back</string>
    <string name="shared_file_saved_locations">com.map1.group.project2.SAVED_LOCATIONS</string>
    <string name="shared_key_saved_locations">SAVED_LOCATIONS</string>
    <string name="hint_id">Id</string>
    <string name="hint_name">Name</string>
    <string name="hint_lat">Lat</string>
    <string name="hint_lng">Lng</string>
    <string name="location_id_text">ID:</string>
    <string name="location_name_text">Name:</string>
    <string name="location_lat_text">Latitude:</string>
    <string name="location_lng_text">Longitude:</string>
    <string name="btn_share">Share</string>
    <string name="text_share_to_other_app">Share to other app</string>
    <string name="text_home">Project2 - Group</string>
    <string name="btn_delete">Delete</string>
</resources>