<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.map1.group.project2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.map1.group.project2.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_locations"
        android:name="com.map1.group.project2.ui.locations.LocationsFragment"
        android:label="@string/title_locations"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/navigation_share"
        android:name="com.map1.group.project2.ui.locations.LocationsFragment"
        android:label="@string/title_share"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/navigation_option"
        android:name="com.map1.group.project2.ui.locations.LocationsFragment"
        android:label="@string/title_option"
        tools:layout="@layout/fragment_locations" />
</navigation>